--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,6 @@
             android:autoSizeTextType="uniform"
             android:autoSizeMinTextSize="12sp"
             android:autoSizeMaxTextSize="75sp"
-            android:text="Hello World!"
             android:id="@+id/cul_result"
             android:textSize="25dp"
             android:gravity="right|bottom"
@@ -67,7 +66,7 @@
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:autoSizeTextType="uniform"
-                    android:text="CE"/>
+                    android:text=""/>
                 <Button
                     android:id="@+id/button_none"
                     android:layout_weight="1"
